--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
     gtag('config', 'G-3B9E8XGDPP');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8755367089602693"
+     crossorigin="anonymous"></script>
 
     <script type="application/ld+json">
     {
